# WeaveRx

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  action.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  triage_feedback.yml
.github/workflows/: ci.yml  docs.yml  release.yml  triage-on-issue.yml
configuration/: index.html
docs/: configuration.md  index.md  installation.md  releasing.md  setup.md
docs/reference/: categories.md  cli.md  llm-providers.md  safeguards.md
docs/releases/: v0.1.2.md  v0.1.3.md
docs/screenshots/: README.md
examples/: README.md  captured_safeguard_warning.txt  captured_triage_clean.txt  llm_provider_examples.md  mock_issue.md  sample_safeguard_warning.json  sample_triage_cli.txt  sample_triage_output.json
examples/captures/: safeguard-warning.txt  triage-clean.txt
installation/: index.html
reference/categories/: index.html
reference/cli/: index.html
reference/llm-providers/: index.html
reference/safeguards/: index.html
releases/v0.1.2/: index.html
releases/v0.1.3/: index.html
releasing/: index.html
screenshots/: index.html
scripts/: generate_doc_screenshots.py
search/: search_index.json
setup/: index.html
src/weaverx/: __init__.py  categories.py  cli.py  draft_generator.py  duplicate_detector.py  github.py  llm.py  safeguards.py  triage.py  utils.py
tests/: __init__.py  test_categories.py  test_cli.py  test_draft_generator.py  test_duplicate_detector.py  test_github_client.py  test_integration.py  test_llm_mock.py  test_llm_prompts.py  test_llm_providers.py  test_safeguards.py  test_triage.py
