[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weaverx"
version = "0.1.0"
description = "AI-powered GitHub issue and PR triage for the medical AI community"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "WeaveRx Contributors" }]
keywords = ["medical-ai", "github", "triage", "llm", "healthcare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]

[project.scripts]
weaverx = "weaverx.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/weaverx"]

[tool.hatch.build.targets.sdist]
include = ["src/weaverx", "README.md", "pyproject.toml"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/weaverx"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "network: tests that call live external APIs",
]
