[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weaverx"
version = "0.1.3"
description = "AI-powered GitHub issue and PR triage for the medical AI community"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "WeaveRx Contributors" }]
keywords = [
    "medical-ai",
    "github-triage",
    "github-bot",
    "monai",
    "nnunet",
    "llm-tools",
    "developer-productivity",
    "safety",
    "triage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27.0",
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/FratresMedAI/WeaveRx"
Repository = "https://github.com/FratresMedAI/WeaveRx"
Issues = "https://github.com/FratresMedAI/WeaveRx/issues"
Changelog = "https://github.com/FratresMedAI/WeaveRx/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
weaverx = "weaverx.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/weaverx"]

[tool.hatch.build.targets.sdist]
include = [
    "src/weaverx",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    "docs",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/weaverx"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m \"not network\""
markers = [
    "network: tests that call live external APIs",
]
